--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -309,9 +309,14 @@ section {
 }
 .work-wrapper img {
   width: 200px;
-  margin: 6px 12px;
+  height: 200px;
+  margin: 12px 24px;
   object-fit: contain;
   object-position: center;
+}
+.work-wrapper.showcase img {
+  width: 300px;
+  height: 300px;
 }
 
 .testimonial {
