hide fotter powered by on small screen

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -423,4 +423,7 @@ footer > .powered-by > h3 {
     margin: 0px auto;
     margin-bottom: 8px;
   }
+  footer > .powered-by {
+    display: none;
+  }
 }
