bg image update

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -163,7 +163,7 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url("https://uploads.strikinglycdn.com/static/backgrounds/food-drinks/83.jpg");
+  background-image: url("/images/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
