--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -86,7 +86,7 @@ h3 {
     justify-content: space-around;
     position: fixed;
     z-index: 10000;
-    top: 14px;
+    top: 20px;
     left: 12px;
     background-color: #636972;
     padding: 6px;
@@ -186,6 +186,11 @@ section {
   flex-direction: column;
   align-items: center;
   padding: 80px 24px;
+  overflow: hidden;
+}
+
+section:nth-child(even) {
+  background-color: #eee;
 }
 
 section#what-we-do {
