--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -187,10 +187,20 @@ section {
   align-items: center;
   padding: 80px 24px;
   overflow: hidden;
+  --accent: rgba(67, 235, 182, 0.4);
 }
 
-section:nth-child(even) {
-  background-color: #eee;
+section#our-team {
+  background-image: linear-gradient(135deg, #fff, var(--accent));
+}
+section#our-clients,
+section#our-work,
+section#why-we-different {
+  background-image: linear-gradient(200deg, var(--accent), #fff);
+}
+section#whos-talking,
+section#testimonials {
+  background-image: linear-gradient(345deg, var(--accent), #fff);
 }
 
 section#what-we-do {
