--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -181,6 +181,10 @@ header .section-title::after {
 }
 header h1 {
   font-size: 2.5em !important;
+  animation-delay: 0.5s;
+}
+header h2 {
+  animation-delay: 1.2s;
 }
 
 section {
