--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -174,6 +174,7 @@ header {
   background-repeat: no-repeat;
   padding: 80px 24px;
   color: #fff;
+  overflow: hidden;
 }
 header .section-title::before,
 header .section-title::after {
@@ -184,7 +185,7 @@ header h1 {
   animation-delay: 0.5s;
 }
 header h2 {
-  animation-delay: 1.2s;
+  animation-delay: 0.5s;
 }
 
 section {
