--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -168,13 +168,23 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url("/images/bg.webp");
+  background-image: url("/images/bg.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   padding: 80px 24px;
   color: #fff;
   overflow: hidden;
+}
+header::before {
+  content: "";
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  background-color: #3d3d3d;
+  opacity: 0.5;
 }
 header .section-title::before,
 header .section-title::after {
@@ -183,9 +193,12 @@ header .section-title::after {
 header h1 {
   font-size: 2.5em !important;
   animation-delay: 0.5s;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 header h2 {
+  margin-top: 12px;
   animation-delay: 0.5s;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
 }
 
 section {
