--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -168,7 +168,7 @@ header {
   align-items: center;
   justify-content: center;
   text-align: center;
-  background-image: url("/images/bg.jpg");
+  background-image: url("/images/bg-min.webp");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
